# teams-basic-translator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: app.py  bot.py  config.py  requirements.txt
infra/: parameters-for-template-AzureBot-with-rg.json  parameters-for-template-BotApp-with-rg.json  template-AzureBot-with-rg.json
