[tool.poetry]
name = "poc-ai-teams-on-rag-chatbot"
version = "0.1.0"
description = ""
authors = ["AlejandroHierro <alejandro.hierro@gyrusds.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
botbuilder-integration-aiohttp = "^4.16.2"
python-dotenv = "^1.0.1"
langchain-google-genai = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
